src/parsers/pop3.c
/* Generated by re2c 2.2 */
#include "logger.h"
#include "pop3.h"
#include <stdbool.h>
#include <string.h>



#define COPY                                                                                                           \
	do                                                                                                                 \
	{                                                                                                                  \
		memcpy(&in->writeBuf[in->written], in->tok, in->cur - in->tok);                                                \
		in->written += in->cur - in->tok;                                                                              \
	} while (0)

bool destuffMail(Input *in)
{
	char yych;
	bool result;

#define YYGETSTATE in->state
switch (YYGETSTATE) {
default:
	goto yy0;
case 0:
	if (in->lim <= in->cur) goto yy15;
	goto yyFillLabel0;
case 1:
	if (in->lim <= in->cur) goto yy4;
	goto yyFillLabel1;
case 2:
	if (in->lim <= in->cur) goto yy4;
	goto yyFillLabel2;
case 3:
	if (in->lim <= in->cur) goto yy10;
	goto yyFillLabel3;
case 4:
	if (in->lim <= in->cur) goto yy26;
	goto yyFillLabel4;
case 5:
	if (in->lim <= in->cur) goto yy20;
	goto yyFillLabel5;
case 6:
	if (in->lim <= in->cur) goto yy22;
	goto yyFillLabel6;
}

#undef YYGETSTATE

	for (;;)
	{
		in->tok = in->mar = in->cur;
		

yy0:
	switch (in->cond) {
	case yycbegin:
		goto yyc_begin;
	case yycline:
		goto yyc_line;
	}
/* *********************************** */
yyc_begin:
yyFillLabel0:
	yych = *in->cur;
	switch (yych) {
	case '\r':	goto yy5;
	case '.':	goto yy6;
	default:
		if (in->lim <= in->cur) {
			in->state = 0;
			{ if(in->cond == yycline) { COPY; in->tok = in->mar = in->cur; } return false; }
		}
		goto yy3;
	}
yy3:
	++in->cur;
yy4:
	in->cond = yycline;
	{ COPY; continue; }
yy5:
	++in->cur;
yyFillLabel1:
	yych = *in->cur;
	switch (yych) {
	case '\n':	goto yy7;
	default:
		if (in->lim <= in->cur) {
			in->state = 1;
			{ if(in->cond == yycline) { COPY; in->tok = in->mar = in->cur; } return false; }
		}
		goto yy4;
	}
yy6:
	in->mar = ++in->cur;
yyFillLabel2:
	yych = *in->cur;
	switch (yych) {
	case '\r':	goto yy9;
	case '.':	goto yy11;
	default:
		if (in->lim <= in->cur) {
			in->state = 2;
			{ if(in->cond == yycline) { COPY; in->tok = in->mar = in->cur; } return false; }
		}
		goto yy4;
	}
yy7:
	++in->cur;
	{ COPY; continue; }
yy9:
	++in->cur;
yyFillLabel3:
	yych = *in->cur;
	switch (yych) {
	case '\n':	goto yy13;
	default:
		if (in->lim <= in->cur) {
			in->state = 3;
			{ if(in->cond == yycline) { COPY; in->tok = in->mar = in->cur; } return false; }
		}
		goto yy10;
	}
yy10:
	in->cur = in->mar;
	goto yy4;
yy11:
	++in->cur;
	in->cond = yycline;
	{ in->writeBuf[in->written++] = '.'; continue; }
yy13:
	++in->cur;
	{ result = true; break; }
yy15:
	{ result = true; break; }
/* *********************************** */
yyc_line:
yyFillLabel4:
	yych = *in->cur;
	switch (yych) {
	case '\n':	goto yy21;
	case '\r':	goto yy23;
	default:
		if (in->lim <= in->cur) {
			in->state = 4;
			{ if(in->cond == yycline) { COPY; in->tok = in->mar = in->cur; } return false; }
		}
		goto yy18;
	}
yy18:
	++in->cur;
yyFillLabel5:
	yych = *in->cur;
	switch (yych) {
	case '\n':
	case '\r':	goto yy20;
	default:
		if (in->lim <= in->cur) {
			in->state = 5;
			{ if(in->cond == yycline) { COPY; in->tok = in->mar = in->cur; } return false; }
		}
		goto yy18;
	}
yy20:
	{ COPY; continue; }
yy21:
	++in->cur;
yy22:
	{ COPY; continue; }
yy23:
	++in->cur;
yyFillLabel6:
	yych = *in->cur;
	switch (yych) {
	case '\n':	goto yy24;
	default:
		if (in->lim <= in->cur) {
			in->state = 6;
			{ if(in->cond == yycline) { COPY; in->tok = in->mar = in->cur; } return false; }
		}
		goto yy22;
	}
yy24:
	++in->cur;
	in->cond = yycbegin;
	{ COPY; continue; }
yy26:
	{ result = true; break; }

	}

	in->state = -1;
	return result;
}

bool stuffMail(Input *in)
{
	char yych;
	bool result;

#define YYGETSTATE in->state
switch (YYGETSTATE) {
default:
	goto yy27;
case 7:
	if (in->lim <= in->cur) goto yy37;
	goto yyFillLabel7;
case 8:
	if (in->lim <= in->cur) goto yy31;
	goto yyFillLabel8;
case 9:
	if (in->lim <= in->cur) goto yy48;
	goto yyFillLabel9;
case 10:
	if (in->lim <= in->cur) goto yy42;
	goto yyFillLabel10;
case 11:
	if (in->lim <= in->cur) goto yy44;
	goto yyFillLabel11;
}

#undef YYGETSTATE

	for (;;)
	{
		in->tok = in->mar = in->cur;
		

yy27:
	switch (in->cond) {
	case yycbegin:
		goto yyc_begin;
	case yycline:
		goto yyc_line;
	}
/* *********************************** */
yyc_begin:
yyFillLabel7:
	yych = *in->cur;
	switch (yych) {
	case '\r':	goto yy32;
	case '.':	goto yy33;
	default:
		if (in->lim <= in->cur) {
			in->state = 7;
			{ if(in->cond == yycline) { COPY; in->tok = in->mar = in->cur; } return false; }
		}
		goto yy30;
	}
yy30:
	++in->cur;
yy31:
	in->cond = yycline;
	{ COPY; continue; }
yy32:
	++in->cur;
yyFillLabel8:
	yych = *in->cur;
	switch (yych) {
	case '\n':	goto yy35;
	default:
		if (in->lim <= in->cur) {
			in->state = 8;
			{ if(in->cond == yycline) { COPY; in->tok = in->mar = in->cur; } return false; }
		}
		goto yy31;
	}
yy33:
	++in->cur;
	in->cond = yycline;
	{ in->writeBuf[in->written++] = '.'; in->writeBuf[in->written++] = '.'; continue; }
yy35:
	++in->cur;
	{ COPY; continue; }
yy37:
	{ char str[] = ".\r\n"; memcpy(&in->writeBuf[in->written], str, sizeof(str) - 1); in->written += sizeof(str) - 1; result = true; break; }
/* *********************************** */
yyc_line:
yyFillLabel9:
	yych = *in->cur;
	switch (yych) {
	case '\n':	goto yy43;
	case '\r':	goto yy45;
	default:
		if (in->lim <= in->cur) {
			in->state = 9;
			{ if(in->cond == yycline) { COPY; in->tok = in->mar = in->cur; } return false; }
		}
		goto yy40;
	}
yy40:
	++in->cur;
yyFillLabel10:
	yych = *in->cur;
	switch (yych) {
	case '\n':
	case '\r':	goto yy42;
	default:
		if (in->lim <= in->cur) {
			in->state = 10;
			{ if(in->cond == yycline) { COPY; in->tok = in->mar = in->cur; } return false; }
		}
		goto yy40;
	}
yy42:
	{ COPY; continue; }
yy43:
	++in->cur;
yy44:
	{ COPY; continue; }
yy45:
	++in->cur;
yyFillLabel11:
	yych = *in->cur;
	switch (yych) {
	case '\n':	goto yy46;
	default:
		if (in->lim <= in->cur) {
			in->state = 11;
			{ if(in->cond == yycline) { COPY; in->tok = in->mar = in->cur; } return false; }
		}
		goto yy44;
	}
yy46:
	++in->cur;
	in->cond = yycbegin;
	{ COPY; continue; }
yy48:
	{ char str[] = ".\r\n"; memcpy(&in->writeBuf[in->written], str, sizeof(str) - 1); in->written += sizeof(str) - 1; result = true; break; }

	}

	in->state = -1;
	return result;
}

bool parsePopResponse(Input *in, bool multiline, bool *success)
{
	char yych;
	bool result;

#define YYGETSTATE in->state
switch (YYGETSTATE) {
default:
	goto yy49;
case 12:
	if (in->lim <= in->cur) goto yy64;
	goto yyFillLabel12;
case 13:
	if (in->lim <= in->cur) goto yy53;
	goto yyFillLabel13;
case 14:
	if (in->lim <= in->cur) goto yy53;
	goto yyFillLabel14;
case 15:
	if (in->lim <= in->cur) goto yy57;
	goto yyFillLabel15;
case 16:
	if (in->lim <= in->cur) goto yy57;
	goto yyFillLabel16;
case 17:
	if (in->lim <= in->cur) goto yy57;
	goto yyFillLabel17;
case 18:
	if (in->lim <= in->cur) goto yy75;
	goto yyFillLabel18;
case 19:
	if (in->lim <= in->cur) goto yy69;
	goto yyFillLabel19;
case 20:
	if (in->lim <= in->cur) goto yy71;
	goto yyFillLabel20;
case 21:
	if (in->lim <= in->cur) goto yy86;
	goto yyFillLabel21;
case 22:
	if (in->lim <= in->cur) goto yy80;
	goto yyFillLabel22;
case 23:
	if (in->lim <= in->cur) goto yy82;
	goto yyFillLabel23;
case 24:
	if (in->lim <= in->cur) goto yy101;
	goto yyFillLabel24;
case 25:
	if (in->lim <= in->cur) goto yy91;
	goto yyFillLabel25;
case 26:
	if (in->lim <= in->cur) goto yy93;
	goto yyFillLabel26;
case 27:
	if (in->lim <= in->cur) goto yy96;
	goto yyFillLabel27;
case 28:
	if (in->lim <= in->cur) goto yy96;
	goto yyFillLabel28;
case 29:
	if (in->lim <= in->cur) goto yy96;
	goto yyFillLabel29;
}

#undef YYGETSTATE

	for (;;)
	{
		in->tok = in->mar = in->cur;
		

yy49:
	switch (in->cond) {
	case yycstatus:
		goto yyc_status;
	case yycmsg_err:
		goto yyc_msg_err;
	case yycmsg_ok:
		goto yyc_msg_ok;
	case yycextra:
		goto yyc_extra;
	}
/* *********************************** */
yyc_status:
yyFillLabel12:
	yych = *in->cur;
	switch (yych) {
	case '+':	goto yy54;
	case '-':	goto yy55;
	default:
		if (in->lim <= in->cur) {
			in->state = 12;
			{ return false; }
		}
		goto yy52;
	}
yy52:
	++in->cur;
yy53:
	{ char str[] = "-ERR Invalid response from origin\r\n"; memcpy(&in->writeBuf[in->written], str, sizeof(str) - 1); in->written += sizeof(str) - 1; result = true; break; }
yy54:
	in->mar = ++in->cur;
yyFillLabel13:
	yych = *in->cur;
	switch (yych) {
	case 'O':	goto yy56;
	default:
		if (in->lim <= in->cur) {
			in->state = 13;
			{ return false; }
		}
		goto yy53;
	}
yy55:
	in->mar = ++in->cur;
yyFillLabel14:
	yych = *in->cur;
	switch (yych) {
	case 'E':	goto yy58;
	default:
		if (in->lim <= in->cur) {
			in->state = 14;
			{ return false; }
		}
		goto yy53;
	}
yy56:
	++in->cur;
yyFillLabel15:
	yych = *in->cur;
	switch (yych) {
	case 'K':	goto yy59;
	default:
		if (in->lim <= in->cur) {
			in->state = 15;
			{ return false; }
		}
		goto yy57;
	}
yy57:
	in->cur = in->mar;
	goto yy53;
yy58:
	++in->cur;
yyFillLabel16:
	yych = *in->cur;
	switch (yych) {
	case 'R':	goto yy61;
	default:
		if (in->lim <= in->cur) {
			in->state = 16;
			{ return false; }
		}
		goto yy57;
	}
yy59:
	++in->cur;
	in->cond = yycmsg_ok;
	{ COPY; *success = true; continue; }
yy61:
	++in->cur;
yyFillLabel17:
	yych = *in->cur;
	switch (yych) {
	case 'R':	goto yy62;
	default:
		if (in->lim <= in->cur) {
			in->state = 17;
			{ return false; }
		}
		goto yy57;
	}
yy62:
	++in->cur;
	in->cond = yycmsg_err;
	{ COPY; *success = false; continue; }
yy64:
	{ result = true; break; }
/* *********************************** */
yyc_msg_err:
yyFillLabel18:
	yych = *in->cur;
	switch (yych) {
	case '\n':	goto yy70;
	case '\r':	goto yy72;
	default:
		if (in->lim <= in->cur) {
			in->state = 18;
			{ return false; }
		}
		goto yy67;
	}
yy67:
	++in->cur;
yyFillLabel19:
	yych = *in->cur;
	switch (yych) {
	case '\n':
	case '\r':	goto yy69;
	default:
		if (in->lim <= in->cur) {
			in->state = 19;
			{ return false; }
		}
		goto yy67;
	}
yy69:
	{ COPY; continue; }
yy70:
	++in->cur;
yy71:
	{ COPY; continue; }
yy72:
	++in->cur;
yyFillLabel20:
	yych = *in->cur;
	switch (yych) {
	case '\n':	goto yy73;
	default:
		if (in->lim <= in->cur) {
			in->state = 20;
			{ return false; }
		}
		goto yy71;
	}
yy73:
	++in->cur;
	{ COPY; result = true; break; }
yy75:
	{ result = true; break; }
/* *********************************** */
yyc_msg_ok:
yyFillLabel21:
	yych = *in->cur;
	switch (yych) {
	case '\n':	goto yy81;
	case '\r':	goto yy83;
	default:
		if (in->lim <= in->cur) {
			in->state = 21;
			{ return false; }
		}
		goto yy78;
	}
yy78:
	++in->cur;
yyFillLabel22:
	yych = *in->cur;
	switch (yych) {
	case '\n':
	case '\r':	goto yy80;
	default:
		if (in->lim <= in->cur) {
			in->state = 22;
			{ return false; }
		}
		goto yy78;
	}
yy80:
	{ COPY; continue; }
yy81:
	++in->cur;
yy82:
	{ COPY; continue; }
yy83:
	++in->cur;
yyFillLabel23:
	yych = *in->cur;
	switch (yych) {
	case '\n':	goto yy84;
	default:
		if (in->lim <= in->cur) {
			in->state = 23;
			{ return false; }
		}
		goto yy82;
	}
yy84:
	++in->cur;
	{ COPY; if(multiline) { in->cond = yycextra; continue; } else { result = true; break; } }
yy86:
	{ result = true; break; }
/* *********************************** */
yyc_extra:
yyFillLabel24:
	yych = *in->cur;
	switch (yych) {
	case '\n':	goto yy92;
	case '\r':	goto yy94;
	default:
		if (in->lim <= in->cur) {
			in->state = 24;
			{ return false; }
		}
		goto yy89;
	}
yy89:
	++in->cur;
yyFillLabel25:
	yych = *in->cur;
	switch (yych) {
	case '\n':
	case '\r':	goto yy91;
	default:
		if (in->lim <= in->cur) {
			in->state = 25;
			{ return false; }
		}
		goto yy89;
	}
yy91:
	{ COPY; continue; }
yy92:
	++in->cur;
yy93:
	{ COPY; continue; }
yy94:
	in->mar = ++in->cur;
yyFillLabel26:
	yych = *in->cur;
	switch (yych) {
	case '\n':	goto yy95;
	default:
		if (in->lim <= in->cur) {
			in->state = 26;
			{ return false; }
		}
		goto yy93;
	}
yy95:
	++in->cur;
yyFillLabel27:
	yych = *in->cur;
	switch (yych) {
	case '.':	goto yy97;
	default:
		if (in->lim <= in->cur) {
			in->state = 27;
			{ return false; }
		}
		goto yy96;
	}
yy96:
	in->cur = in->mar;
	goto yy93;
yy97:
	++in->cur;
yyFillLabel28:
	yych = *in->cur;
	switch (yych) {
	case '\r':	goto yy98;
	default:
		if (in->lim <= in->cur) {
			in->state = 28;
			{ return false; }
		}
		goto yy96;
	}
yy98:
	++in->cur;
yyFillLabel29:
	yych = *in->cur;
	switch (yych) {
	case '\n':	goto yy99;
	default:
		if (in->lim <= in->cur) {
			in->state = 29;
			{ return false; }
		}
		goto yy96;
	}
yy99:
	++in->cur;
	{ COPY; result = true; break; }
yy101:
	{ result = true; break; }

	}

	*success = in->cond == yycmsg_ok || in->cond == yycextra;
	in->tok = in->mar = in->cur;
	in->state = -1;
	in->cond = yycstatus;
	return result;
}

PopCommand parsePopRequest(Input *in, char **arg, size_t *argLen, size_t *len)
{
	char yych;
	char *args = NULL, *arge = NULL, *end;
	PopCommand result;
	#define yyt1 in->yyt1
#define yyt2 in->yyt2


#define YYGETSTATE in->state
switch (YYGETSTATE) {
default:
	goto yy102;
case 30:
	if (in->lim <= in->cur) goto yy224;
	goto yyFillLabel30;
case 31:
	if (in->lim <= in->cur) goto yy106;
	goto yyFillLabel31;
case 32:
	if (in->lim <= in->cur) goto yy106;
	goto yyFillLabel32;
case 33:
	if (in->lim <= in->cur) goto yy106;
	goto yyFillLabel33;
case 34:
	if (in->lim <= in->cur) goto yy106;
	goto yyFillLabel34;
case 35:
	if (in->lim <= in->cur) goto yy106;
	goto yyFillLabel35;
case 36:
	if (in->lim <= in->cur) goto yy106;
	goto yyFillLabel36;
case 37:
	if (in->lim <= in->cur) goto yy106;
	goto yyFillLabel37;
case 38:
	if (in->lim <= in->cur) goto yy106;
	goto yyFillLabel38;
case 39:
	if (in->lim <= in->cur) goto yy106;
	goto yyFillLabel39;
case 40:
	if (in->lim <= in->cur) goto yy106;
	goto yyFillLabel40;
case 41:
	if (in->lim <= in->cur) goto yy106;
	goto yyFillLabel41;
case 42:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel42;
case 43:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel43;
case 44:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel44;
case 45:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel45;
case 46:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel46;
case 47:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel47;
case 48:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel48;
case 49:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel49;
case 50:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel50;
case 51:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel51;
case 52:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel52;
case 53:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel53;
case 54:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel54;
case 55:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel55;
case 56:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel56;
case 57:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel57;
case 58:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel58;
case 59:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel59;
case 60:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel60;
case 61:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel61;
case 62:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel62;
case 63:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel63;
case 64:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel64;
case 65:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel65;
case 66:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel66;
case 67:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel67;
case 68:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel68;
case 69:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel69;
case 70:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel70;
case 71:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel71;
case 72:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel72;
case 73:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel73;
case 74:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel74;
case 75:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel75;
case 76:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel76;
case 77:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel77;
case 78:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel78;
case 79:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel79;
case 80:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel80;
case 81:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel81;
case 82:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel82;
case 83:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel83;
case 84:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel84;
case 85:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel85;
case 86:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel86;
case 87:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel87;
case 88:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel88;
case 89:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel89;
case 90:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel90;
case 91:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel91;
case 92:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel92;
case 93:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel93;
case 94:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel94;
case 95:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel95;
case 96:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel96;
case 97:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel97;
case 98:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel98;
case 99:
	if (in->lim <= in->cur) goto yy121;
	goto yyFillLabel99;
}

#undef YYGETSTATE

	for (;;)
	{
		
